--- a/caseStudy.html
+++ b/caseStudy.html
@@ -17,16 +17,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page"  style="font-size: 20px;" href="index.html">Index</a>
-            <a class="nav-link" href="rootCausesByron.html">Root Cause</a>
+            <a class="nav-link active" aria-current="page" href="caseStudy.html" style="font-size: 20px;">Case Study</a>
+            <a class="nav-link" href="index.html">Index</a>
             <a class="nav-link" href="initialResearchByronO.html">Intial Research</a>
-            <a class="nav-link" href="caseStudy.html">Case Study</a>
+            <a class="nav-link" href="rootCausesByron.html">Root Cause</a>
             <a class="nav-link" href="aboutByronO.html">About Me</a>
           </div>
         </div>
       </div>
     </nav> 
-    <center><img src="proposalposter.png" style="width:500px;"></center>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
