--- a/rootCausesByron.html
+++ b/rootCausesByron.html
@@ -17,8 +17,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page"  style="font-size: 20px;" href="index.html">Index</a>
-            <a class="nav-link" href="rootCausesByron.html">Root Cause</a>
+            <a class="nav-link active" aria-current="page" href="rootCausesByron.html" style="font-size: 20px;">Root Cause</a>
+            <a class="nav-link" href="index.html">Index</a>
             <a class="nav-link" href="initialResearchByronO.html">Intial Research</a>
             <a class="nav-link" href="caseStudy.html">Case Study</a>
             <a class="nav-link" href="aboutByronO.html">About Me</a>
@@ -26,7 +26,7 @@
         </div>
       </div>
     </nav> 
-    <center><img src="proposalposter.png" style="width:500px;"></center>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <img scr="https://mail.google.com/mail/u/0/?ui=2&ik=43d0b0a57c&attid=0.1&permmsgid=msg-a:r-6075821821817952796&th=18b50b4f9a86bc83&view=fimg&realattid=f_lnzln93v0&disp=thd&attbid=ANGjdJ9xLFbQplafT4tsnKbeMb964BxHewOOs1PEW85n80_btlebMhGW6C_-hkfMoBSu67X-IFuM2cGR1MKTzZ6KPp53N-h5VmSZVkOorxA7OSIy1mUCqUAp3ShcapI&ats=2524608000000&sz=w960-h883" alt="proposalposter" height="110" width="85">
 </body>
 </html>
