--- a/initialResearchByronO.html
+++ b/initialResearchByronO.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Byron's Initial Research</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-<body>
+<body class="body">
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="https://images.prismic.io/sneakql/63caeb3e-ff75-4d3f-bb4b-42df23896203_16.png?auto=format&ar=1%3A0.6666666666666666&fit=crop&ixlib=react-9.7.0&w=580" alt="McQreenLogo" width="30" height="24"></a>
@@ -17,16 +18,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page"  style="font-size: 20px;" href="index.html">Index</a>
-            <a class="nav-link" href="rootCausesByron.html">Root Cause</a>
-            <a class="nav-link" href="initialResearchByronO.html">Intial Research</a>
+            <a class="nav-link active" aria-current="page" href="initialResearchByronO.html" style="font-size: 20px;">Intial Research</a>
+            <a class="nav-link" href="index.html">Index</a>
             <a class="nav-link" href="caseStudy.html">Case Study</a>
+            <a class="nav-link" href="rootCausesByron.html">Root Cause</a>
             <a class="nav-link" href="aboutByronO.html">About Me</a>
           </div>
         </div>
       </div>
     </nav> 
-    <center><img src="proposalposter.png" style="width:500px;"></center>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
