--- a/rootCausesByron.html
+++ b/rootCausesByron.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Byron's Initial Research</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Byron's Initial Research</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
@@ -27,6 +28,5 @@
       </div>
     </nav> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <img scr="https://mail.google.com/mail/u/0/?ui=2&ik=43d0b0a57c&attid=0.1&permmsgid=msg-a:r-6075821821817952796&th=18b50b4f9a86bc83&view=fimg&realattid=f_lnzln93v0&disp=thd&attbid=ANGjdJ9xLFbQplafT4tsnKbeMb964BxHewOOs1PEW85n80_btlebMhGW6C_-hkfMoBSu67X-IFuM2cGR1MKTzZ6KPp53N-h5VmSZVkOorxA7OSIy1mUCqUAp3ShcapI&ats=2524608000000&sz=w960-h883" alt="proposalposter" height="110" width="85">
 </body>
 </html>
