--- a/aboutByronO.html
+++ b/aboutByronO.html
@@ -29,8 +29,8 @@
     </nav> 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <center><h1 id="title">Byron O.D. Ogada Jr</h1></center>
-  <center><h2>(the coolest)</h2></center>
-  <center><img src="me.png" style="width:500px;"></center>
+  <center><h2 onmouseover="showAdjectives(this)" onmouseout="getRidOfAdjectives">The Coolest)</h2></center>
+  <center><div id="meImage"><img onclick="changeImage()" src="me1.png" style="width:500px;"></center></div>
   <p>I'm a really coool guy the greatest</p>
 </body>
 </html>
